# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wallet"
version = "0.1.0"
description = "Wallet payments API created as a test task"
readme = "README.md"
authors = [
  "brannt <brannt@yandex.ru>"
]
repository = "https://github.com/brannt/wallet"
homepage = "https://github.com/brannt/wallet"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"wallet" = "wallet.__main__:app"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "==0.63.0"
databases = {extras = ["mysql"], version = "^0.4.3"}
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
pyupgrade = "^2.7.4"
black = "^20.8b1"
mypy = "^0.971"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pylint = "^2.6.0"
pydocstyle = "^5.1.1"
pre-commit = "^2.9.3"
SQLAlchemy-Utils = "^0.37.0"
pytest-asyncio = "^0.14.0"
httpx = "^0.17.1"
aiosqlite = "^0.17.0"
ipdb = "^0.13.7"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
